--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <li class="active">
                         <a href="index.html#">首页	</a>
                     </li>
-	      <!-- <li>
-                        <a href="http://www.xxstv.cc/" target="_blank" style="color:#FF0000" rel="external nofollow">神器APP</a>
-                    </li> -->
+	      <li>
+                        <a href="http://kingss.pw" target="_blank" style="color:#FF0000" rel="external nofollow">看世界</a>
+                    </li>
 	      <!-- <li>
                         <a href="http://t66ydh.net/" target="_blank" style="color:#FF0000" rel="external nofollow">草榴导航</a>
                     </li> -->
