--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 	      <li>
                         <a href="http://kingss.pw" target="_blank" style="color:#FF0000" rel="external nofollow">看世界</a>
                     </li>
-	      <!-- <li>
-                        <a href="http://t66ydh.net/" target="_blank" style="color:#FF0000" rel="external nofollow">草榴导航</a>
-                    </li> -->
+	      <li>
+                        <a href="http://caoliudh.tk" target="_blank" style="color:#FF0000" rel="external nofollow">草榴导航</a>
+                    </li>
                     <li>
                         <a href="yingshiku.html" target="_blank">影视库</a>
                     </li>
