--- a/renyimen.html
+++ b/renyimen.html
@@ -40,7 +40,7 @@
     <li><a href="jishuzhai.html" target="_blank" title="技术宅">技术宅</a></li>
     <li><a href="acg.html" target="_blank" title="ACG">ACG</a></li>
     <li><a href="fulizhan.html" target="_blank" title="宅男福利站">HOT福利站</a></li>
-    <li><a href="http://t66ydh.net" title="草榴导航" target="_blank">草榴导航</a></li>
+    <li><a href="http://caoliudh.tk" title="草榴导航" target="_blank">草榴导航</a></li>
     <li><a href="http://www.xxstv.cc/" title="神器APP" target="_blank" rel="external nofollow">神器APP</a></li>
   </ul>
 </div><br>
