--- a/yingshiku.html
+++ b/yingshiku.html
@@ -39,7 +39,7 @@ body{ background:url("http://i1.piimg.com/97e102d8f215f390.jpg") repeat;backgrou
     <li><a href="renyimen.html" target="_blank" title="任意门">任意门</a></li>
     <li><a href="acg.html" target="_blank" title="ACG">ACG</a></li>
     <li><a href="fulizhan.html" target="_blank" title="HOT福利站">HOT福利站</a></li>
-    <li><a href="http://t66ydh.net" title="草榴导航" target="_blank">草榴导航</a></li>
+    <li><a href="http://caoliudh.tk" title="草榴导航" target="_blank">草榴导航</a></li>
     <li><a href="http://www.xxstv.cc/" title="神器APP" target="_blank" rel="external nofollow">神器APP</a></li>
 </ul>
 </div>
