--- a/acg.html
+++ b/acg.html
@@ -13,7 +13,7 @@
 <style type="text/css">body,td,th { font-family: \5FAE\8F6F\96C5\9ED1, \5B8B\4F53, Verdana, sans-serif; }
 
 
-body{ background:url("http://i1.piimg.com/61b265445d1fce36.jpg") repeat;background-size:cover;background-attachment: fixed;}
+body{ background:url("https://ooo.0o0.ooo/2016/10/28/5812bfe0513a0.png") repeat;background-size:cover;background-attachment: fixed;}
 
 
 </style>
