--- a/yingshiku.html
+++ b/yingshiku.html
@@ -10,7 +10,7 @@
 <style type="text/css">body,td,th { font-family: \5FAE\8F6F\96C5\9ED1, \5B8B\4F53, Verdana, sans-serif; }
 
 
-body{ background:url("http://i1.piimg.com/97e102d8f215f390.jpg") repeat;background-size:cover;background-attachment: fixed;}
+body{ background:url("https://ooo.0o0.ooo/2016/10/28/5812bf3c35b0f.jpg") repeat;background-size:cover;background-attachment: fixed;}
 
 
 </style>
