--- a/fulizhan.html
+++ b/fulizhan.html
@@ -2,9 +2,9 @@
 <!-- saved from url=(0023)http://www.fulifuli.top -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>HOT福利站 - 夜趣福利导航 - 宅男宅女必上的神级网站大全</title>
-<meta name="keywords" content="宅男,福利吧,找福利,妹子图,美女写真,特色爱好,汤不热,邪恶gif,夜趣福利站 ">
-<meta name="description" content="寻找福利，夜趣福利导航一个就够了。">
+<title>HOT福利站 - 福利福利导航 - 宅男宅女必上的神级网站大全</title>
+<meta name="keywords" content="宅男,福利吧,找福利,妹子图,美女写真,特色爱好,汤不热,邪恶gif,福利福利站 ">
+<meta name="description" content="寻找福利，福利福利导航一个就够了。">
 <link type="text/css" rel="stylesheet" href="./csshaha/common.css">
 <link href="https://apps.bdimg.com/libs/fontawesome/4.4.0/css/font-awesome.css" rel="stylesheet">
 <style type="text/css">body,td,th { font-family: \5FAE\8F6F\96C5\9ED1, \5B8B\4F53, Verdana, sans-serif; }
