--- a/jishuzhai.html
+++ b/jishuzhai.html
@@ -50,13 +50,13 @@ body{ background:url("https://ooo.0o0.ooo/2016/10/28/5812c094853c6.jpg") repeat;
  <div id="daili" class="wrap mt1 nav">
 <div class="btcont">科学上网</div>
   <ul class="nav_menu clearfix">
-      <li><a href="http://kingss.pw/" title="加速度" rel="external nofollow" target="_blank">加速度</a></li>
-      <li><a href="http://kingss.pw/" title="壁虎漫步" rel="external nofollow" target="_blank">壁虎漫步</a></li> 
+      <li><a href="http://t.cn/RcHEvzV" title="加速度" rel="external nofollow" target="_blank">加速度</a></li>
+      <li><a href="http://t.cn/RcHEvzV" title="壁虎漫步" rel="external nofollow" target="_blank">壁虎漫步</a></li> 
       <li><a href="https://github.com/comeforu2012/truth/wiki/ChromePlus" title="ChromePlus" rel="external nofollow" target="_blank">ChromePlus</a></li> 
       <li><a href="http://www.ppdaili.com/" title="点击continiu anyway…" rel="external nofollow" target="_blank">PP代理</a></li>
-      <li><a href="http://kingss.pw/" title="点击continiu anyway…" rel="external nofollow" target="_blank">急速代理</a></li> 
+      <li><a href="http://t.cn/RcHEvzV" title="点击continiu anyway…" rel="external nofollow" target="_blank">急速代理</a></li> 
       <li><a href="http://fazero.cc/" title="FAZERO" rel="external nofollow" target="_blank">FAZERO</a></li>     
-      <li><a href="http://kingss.pw/" title="土行孙" rel="external nofollow" target="_blank">土行孙</a></li>
+      <li><a href="http://t.cn/RcHEvzV" title="土行孙" rel="external nofollow" target="_blank">土行孙</a></li>
       <li><a href="http://wujieliulan.com/download.php" title="无界网络" rel="external nofollow" target="_blank">无界网络</a></li>
       <li><a href="http://dongtaiwang.com/" title="动态网" rel="external nofollow" target="_blank">动态网</a></li>
       <li><a href="http://shadowsocks.org/" title="shadowsocks"  title="自由网络" rel="external nofollow" target="_blank">SS</a></li>
