--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
             <div class="text-center">
                 <a href="http://www.baidu.com/" target="_blank" class="index-btn">百度一下</a>&emsp;
-                <a href="http://www.google.cn/" target="_blank" class="index-btn">谷歌一下</a>
+                <a href="http://superssr.tk/code" target="_blank" class="index-btn">谷歌一下</a>
             </div>
 
         </div>
