--- a/fulizhan.html
+++ b/fulizhan.html
@@ -10,7 +10,7 @@
 <style type="text/css">body,td,th { font-family: \5FAE\8F6F\96C5\9ED1, \5B8B\4F53, Verdana, sans-serif; }
 
 
-body{ background:url("http://www.bz55.com/uploads/allimg/130720/1-130H0105417.jpg") repeat;background-size:cover;background-attachment: fixed;}
+body{ background:url("https://ooo.0o0.ooo/2016/12/09/584a76a88179a.jpg") repeat;background-size:cover;background-attachment: fixed;}
 
 
 </style>
