--- a/fulizhan.html
+++ b/fulizhan.html
@@ -800,7 +800,7 @@ document.write('<DIV ID="Layer_ad" STYLE="position:absolute; width:120; height:2
 </br>
 免责声明：所有站点源于收集或网友分享,其内容与本站无关！禁止18岁以下访问福利站页面。
 </br>
-Copyright &copy; 2009-2016 fulifuli.top <a href="http://fulifuli.top/">夜趣福利导航</a>  
+Copyright &copy; 2009-2016 fulifuli.top <a href="http://fulifuli.top/">福利福利导航</a>  
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1260662660'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1260662660' type='text/javascript'%3E%3C/script%3E"));</script>
 </div>
 </body></html>
