--- a/jishuzhai.html
+++ b/jishuzhai.html
@@ -51,11 +51,11 @@ body{ background:url("https://ooo.0o0.ooo/2016/10/28/5812c094853c6.jpg") repeat;
 <div class="btcont">科学上网</div>
   <ul class="nav_menu clearfix">
       <li><a href="http://t.cn/RcHEvzV" title="加速度" rel="external nofollow" target="_blank">加速度</a></li>
-      <li><a href="http://t.cn/RcHEvzV" title="壁虎漫步" rel="external nofollow" target="_blank">壁虎漫步</a></li> 
+      <li><a href="http://superssr.tk/code" title="正确上网" rel="external nofollow" target="_blank">正确上网</a></li> 
       <li><a href="https://github.com/comeforu2012/truth/wiki/ChromePlus" title="ChromePlus" rel="external nofollow" target="_blank">ChromePlus</a></li> 
       <li><a href="http://www.ppdaili.com/" title="点击continiu anyway…" rel="external nofollow" target="_blank">PP代理</a></li>
       <li><a href="http://t.cn/RcHEvzV" title="点击continiu anyway…" rel="external nofollow" target="_blank">急速代理</a></li> 
-      <li><a href="http://fazero.cc/" title="FAZERO" rel="external nofollow" target="_blank">FAZERO</a></li>     
+      <li><a href="http://fazero.me/" title="FAZERO" rel="external nofollow" target="_blank">FAZERO</a></li>     
       <li><a href="http://t.cn/RcHEvzV" title="土行孙" rel="external nofollow" target="_blank">土行孙</a></li>
       <li><a href="http://wujieliulan.com/download.php" title="无界网络" rel="external nofollow" target="_blank">无界网络</a></li>
       <li><a href="http://dongtaiwang.com/" title="动态网" rel="external nofollow" target="_blank">动态网</a></li>
@@ -67,7 +67,7 @@ body{ background:url("https://ooo.0o0.ooo/2016/10/28/5812c094853c6.jpg") repeat;
       <li><a href="http://sourceforge.net/" title="sourceforge" rel="external nofollow" target="_blank">Sourceforge</a></li>
       <li><a href="https://zh.wikipedia.org/wiki/Wikipedia:%E9%A6%96%E9%A1%B5" title="维基百科" rel="external nofollow" target="_blank">维基百科</a></li>
       <li><a href="http://freecode.com/" title="freecode" rel="external nofollow" target="_blank">Freecode</a></li>
-      <li><a href="jishuzhai.html#" title="虚位以待" rel="external nofollow" target="_blank">虚位以待</a></li>
+      <li><a href="https://freessr.xyz" title="免费ss" rel="external nofollow" target="_blank">免费ss</a></li>
   </ul>
 </div><br>
 <div id="qiangwai" class="wrap mt1 nav">
