--- a/jishuzhai.html
+++ b/jishuzhai.html
@@ -43,7 +43,7 @@ body{ background:url("https://ooo.0o0.ooo/2016/10/28/5812c094853c6.jpg") repeat;
     <li><a href="http://t.cn/RcHEvzV" title="神器APP" target="_blank" rel="external nofollow">神器APP</a></li>
   </ul>
 </div><br>
-<div style="text-align: center"><span style="font-size: 14pt;"><strong><span style="color: #ff0000;"><span style="background-color: #ff0000; color: #ffffff;">提示</span>：部分网站需要梯子. <a href="http://ss.freessr.cf" target="_blank">点我爬墙! </a>同时按<span style="background-color: #ff0000; color: #ffffff;">Ctrl+D</span>收藏本站!</span></strong></span>
+<div style="text-align: center"><span style="font-size: 14pt;"><strong><span style="color: #ff0000;"><span style="background-color: #ff0000; color: #ffffff;">提示</span>：部分网站需要梯子. <a href="https://freessr.xyz" target="_blank">点我爬墙! </a>同时按<span style="background-color: #ff0000; color: #ffffff;">Ctrl+D</span>收藏本站!</span></strong></span>
 <br>
 <br>
 <br>
