--- a/renyimen.html
+++ b/renyimen.html
@@ -48,7 +48,7 @@
 <div style="text-align: center">
 <script type="text/javascript"></script>
 </div>
-<div style="text-align: center"><span style="font-size: 14pt;"><strong><span style="color: #ff0000;"><span style="background-color: #ff0000; color: #ffffff;">提示</span>：部分网站需要梯子. <a href="http://ss.freessr.cf" target="_blank">点我爬墙! </a>同时按<span style="background-color: #ff0000; color: #ffffff;">Ctrl+D</span>收藏本站!</span></strong></span>
+<div style="text-align: center"><span style="font-size: 14pt;"><strong><span style="color: #ff0000;"><span style="background-color: #ff0000; color: #ffffff;">提示</span>：部分网站需要梯子. <a href="https://freessr.xyz" target="_blank">点我爬墙! </a>同时按<span style="background-color: #ff0000; color: #ffffff;">Ctrl+D</span>收藏本站!</span></strong></span>
 <br>
 <br>
 
