--- a/fulizhan.html
+++ b/fulizhan.html
@@ -243,7 +243,7 @@ body{ background:url("https://ooo.0o0.ooo/2016/12/09/584a76a88179a.jpg") repeat;
     <li><a href="http://zhainanba.net/"  title="宅男吧" rel="external nofollow" target="_blank">宅男吧</a></li>
     <li><a href="http://www.fulibac.com/" title="且听风吟福利" rel="external nofollow"  target="_blank">且听风吟</a> </li>    
     <li><a href="http://www.32an.cc/" title="32个赞" rel="external nofollow" target="_blank">32个赞</a></li>
-    <li><a href="https://youdian.in/" title="有点硬" rel="external nofollow" target="_blank">有点硬</a></li>    
+    <li><a href="https://ydy.one/" title="有点硬" rel="external nofollow" target="_blank">有点硬</a></li>    
     <li><a href="http://www.zcgoo.com/"  title="逛窑子" rel="external nofollow" target="_blank">逛窑子</a></li>
     <li><a href="http://wuxianfuli.cc/"  title="无限福利" rel="external nofollow" target="_blank">无限福利</a></li>
     <li><a href="http://www.fulidang.com"  title="福利档" rel="external nofollow" target="_blank">福利档</a></li>
