--- a/fulizhan.html
+++ b/fulizhan.html
@@ -40,7 +40,7 @@ body{ background:url("https://ooo.0o0.ooo/2016/12/09/584a76a88179a.jpg") repeat;
     <li><a href="renyimen.html" target="_blank" title="任意门">任意门</a></li>
     <li><a href="acg.html" target="_blank" title="ACG">ACG</a></li>
     <li><a href="http://caoliudh.tk" title="草榴导航" target="_blank">草榴导航</a></li>
-    <li><a href="http://t.cn/RcHEvzV" title="神器APP" target="_blank" rel="external nofollow">神器APP</a></li>
+    <li><a href="http://ss.freessr.cf" title="神器APP" target="_blank" rel="external nofollow">神器APP</a></li>
 </ul>
 </div>
 <br>
