--- a/renyimen.html
+++ b/renyimen.html
@@ -41,7 +41,7 @@
     <li><a href="acg.html" target="_blank" title="ACG">ACG</a></li>
     <li><a href="fulizhan.html" target="_blank" title="宅男福利站">HOT福利站</a></li>
     <li><a href="http://caoliudh.tk" title="草榴导航" target="_blank">草榴导航</a></li>
-    <li><a href="http://t.cn/RcHEvzV" title="神器APP" target="_blank" rel="external nofollow">神器APP</a></li>
+    <li><a href="http://ss.freessr.cf" title="神器APP" target="_blank" rel="external nofollow">神器APP</a></li>
   </ul>
 </div><br>
 
