--- a/acg.html
+++ b/acg.html
@@ -43,8 +43,8 @@ body{ background:url("https://ooo.0o0.ooo/2016/10/28/5812bfe0513a0.png") repeat;
     <li><a href="jishuzhai.html" target="_blank" title="技术宅">技术宅</a></li>
     <li><a href="renyimen.html" target="_blank" title="任意门">任意门</a></li>
     <li><a href="fulizhan.html" target="_blank" title="宅男福利站">HOT福利站</a></li>
-    <li><a href="http://t66ydh.net" title="草榴导航" target="_blank">草榴导航</a></li>
-    <li><a href="http://www.xxstv.cc/" title="神器APP" target="_blank" rel="external nofollow">神器APP</a></li>
+    <li><a href="http://ss.freessr.cf" title="草榴导航" target="_blank">草榴导航</a></li>
+    <li><a href="http://ss.freessr.cf" title="神器APP" target="_blank" rel="external nofollow">神器APP</a></li>
   </ul>
 </div><br>
 <div style="text-align: center">
