--- a/yingshiku.html
+++ b/yingshiku.html
@@ -40,7 +40,7 @@ body{ background:url("https://ooo.0o0.ooo/2016/10/28/5812bf3c35b0f.jpg") repeat;
     <li><a href="acg.html" target="_blank" title="ACG">ACG</a></li>
     <li><a href="fulizhan.html" target="_blank" title="HOT福利站">HOT福利站</a></li>
     <li><a href="http://caoliudh.tk" title="草榴导航" target="_blank">草榴导航</a></li>
-    <li><a href="http://ss.freessr.cf" title="神器APP" target="_blank" rel="external nofollow">神器APP</a></li>
+    <li><a href="https://ssrssr.net/index.php/index/register/" title="神器APP" target="_blank" rel="external nofollow">神器APP</a></li>
 </ul>
 </div>
 <br>
