--- a/acg.html
+++ b/acg.html
@@ -43,14 +43,14 @@ body{ background:url("https://ooo.0o0.ooo/2016/10/28/5812bfe0513a0.png") repeat;
     <li><a href="jishuzhai.html" target="_blank" title="技术宅">技术宅</a></li>
     <li><a href="renyimen.html" target="_blank" title="任意门">任意门</a></li>
     <li><a href="fulizhan.html" target="_blank" title="宅男福利站">HOT福利站</a></li>
-    <li><a href="http://ss.freessr.cf" title="草榴导航" target="_blank">草榴导航</a></li>
-    <li><a href="http://ss.freessr.cf" title="神器APP" target="_blank" rel="external nofollow">神器APP</a></li>
+    <li><a href="https://freessr.win" title="草榴导航" target="_blank">草榴导航</a></li>
+    <li><a href="https://freessr.win" title="神器APP" target="_blank" rel="external nofollow">神器APP</a></li>
   </ul>
 </div><br>
 <div style="text-align: center">
 <script type="text/javascript"></script>
 </div>
-<div style="text-align: center"><span style="font-size: 14pt;"><strong><span style="color: #ff0000;"><span style="background-color: #ff0000; color: #ffffff;">提示</span>：部分网站需要梯子. <a href="http://ss.freessr.cf" target="_blank">点我爬墙! </a>同时按<span style="background-color: #ff0000; color: #ffffff;">Ctrl+D</span>收藏本站!</span></strong></span>
+<div style="text-align: center"><span style="font-size: 14pt;"><strong><span style="color: #ff0000;"><span style="background-color: #ff0000; color: #ffffff;">提示</span>：部分网站需要梯子. <a href="https://freessr.win" target="_blank">点我爬墙! </a>同时按<span style="background-color: #ff0000; color: #ffffff;">Ctrl+D</span>收藏本站!</span></strong></span>
 <br>
 <br>
 
