--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </br>
                     如果你有优质的站点推荐或不希望被收录，请联系：helloworld@gmail.com
                     </br>
-                    喜欢 <span class="font-16 text-info-light">“福利福利站 fulifuli.top”</span>的朋友记得分享给你的好同事，好基友，好朋友，好闺蜜哦！
+                    喜欢 <span class="font-16 text-info-light">“福利福利站 fulifuli.bid”</span>的朋友记得分享给你的好同事，好基友，好朋友，好闺蜜哦！
                     </br>
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=110 src="//music.163.com/outchain/player?type=0&amp;id=111422234&amp;auto=1&amp;height=90"></iframe>
 <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=110 src="//music.163.com/outchain/player?type=0&amp;id=163088881&amp;auto=0&amp;height=90"></iframe>
@@ -155,7 +155,7 @@
         </div>
     <div class="footer">
         <p>
-            <a href="http://fulifuli.top" target="_blank">福利福利站 fulifuli.top</a>
+            <a href="http://fulifuli.bid" target="_blank">福利福利站 fulifuli.bid</a>
             ©Copyright 2009-2016
             声明：所有站点源于收集与网友分享，其内容与本站无关！禁止18岁以下访问福利站。
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1260662660'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1260662660' type='text/javascript'%3E%3C/script%3E"));</script>
