--- a/yingshiku.html
+++ b/yingshiku.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- saved from url=(0023)http://fulifuli.top -->
+<!-- saved from url=(0023)http://fulifuli.bid -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <title>影视库 - 福利福利导航 - 宅男宅女必上的神级网站大全</title>
@@ -380,7 +380,7 @@ document.write('<DIV ID="Layer_ad" STYLE="position:absolute; width:120; height:2
 </br>
 免责声明：所有站点源于收集或网友分享,其内容与本站无关！禁止18岁以下访问福利站页面。
 </br>
-Copyright &copy; 2009-2016 fulifuli.top <a href="http://fulifuli.top/">福利福利导航</a>  
+Copyright &copy; 2009-2016 fulifuli.bid <a href="http://fulifuli.bid/">福利福利导航</a>  
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1260662660'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1260662660' type='text/javascript'%3E%3C/script%3E"));</script>
 </br>
 
