--- a/fulizhan.html
+++ b/fulizhan.html
@@ -55,24 +55,89 @@ body{ background:url("https://ooo.0o0.ooo/2016/12/09/584a76a88179a.jpg") repeat;
 <div id="zonghe" class="btcont" style="float:left">综合站</div>  
     
   <ul class="nav nav_menu clearfix">
-      <li><a href="http://www.lieqizhijia.com/forum.php" title="稀有资源论坛" rel="external nofollow" target="_blank">稀有资源论坛</a></li>
-      <li><a href="http://avtai.org/" style="color:#FF0000"  title="AvTai手机在线视频" rel="external nofollow" target="_blank">AvTai在线视频</a></li>
-      <li><a href="http://www.ztx8.org/"  style="color:#FF0000" title="老司机开车" rel="external nofollow" target="_blank">老司机开车</a></li>
-	  <li><a href="https://sezhong.se"  style="color:#FF0000" title="勃起啦" rel="external nofollow" target="_blank">勃起啦</a></li>
-	  <li><a href="http://cl.dicool.pw/index.php?u=393020&amp;ext=2fd5d" title="草榴1024" rel="external nofollow" target="_blank">1024①</a></li>
-      <li><a href="http://t66y.com/index.php?u=393020&amp;ext=2fd5d" title="1024永久地址" rel="external nofollow" target="_blank">1024永久</a></li>
-      <li><a href="http://www.rzctube.net/?fulidh" style="color:#FF0000" title="人之初在线视频" rel="external nofollow" target="_blank">人之初在线视频 </a></li>
-      <li><a href="http://www.fuliti.co/" style="color:#FF0000"  title="福利梯找资源" rel="external nofollow" target="_blank">福利梯找资源</a></li>
-      <li><a href="http://45.33.37.202/" style="color:#FF0000"  title="倾城自拍社区" rel="external nofollow" target="_blank">倾城自拍社区</a></li>
-      <li><a href="http://www.daoguovr.net/" style="color:#FF0000" title="岛国VR资源网" rel="external nofollow" target="_blank">岛国VR资源网</a></li>
-      <li><a href="http://104.194.212.9/forum/index.php" title="第一会所sis001" rel="external nofollow" target="_blank">sis001①</a></li>
+      <li><a href="http://yqq88go.com/xbyn8/151098868"  style="color:#FF0000"  title="性吧成人论坛" rel="external nofollow" target="_blank">性吧成人论坛</a></li>
+      <li><a href="http://www.monaibbs.xyz/" style="color:#FF0000"  title="摸奶社区" rel="external nofollow" target="_blank">摸奶社区</a></li>
+      <li><a href="http://www.znflsq8.info" style="color:#FF0000"  title="精品自拍视频" rel="external nofollow" target="_blank">精品自拍视频</a></li>
+      <li><a href="http://cc.postcc.us/index.php?u=393020&ext=2fd5d" title="草榴1024" rel="external nofollow" target="_blank">1024①</a></li>
+      <li><a href="http://t66y.com/index.php?u=393020&ext=2fd5d" title="1024永久地址" rel="external nofollow" target="_blank">1024永久</a></li>
+      <li><a href="http://www.jiuzhouav.com/"  style="color:#FF0000"  title="日本AV在线播放" rel="external nofollow" target="_blank">日本AV在线播放</a></li>
+      <li><a href="http://www.ribifuli.com/" style="color:#FF0000"  title="日逼福利" rel="external nofollow" target="_blank">日逼福利</a></li>
+      <li><a href="http://www.pjlbbs.top" style="color:#FF0000" title="潘金莲" rel="external nofollow" target="_blank">潘金莲</a></li>
+      <li><a href="https://g.redi.biz/" style="color:#FF0000"  title="26uuu成人在线" rel="external nofollow" target="_blank">26uuu成人在线</a></li>
+      <li><a href="http://104.194.212.10/forum/index.php" title="第一会所sis001" rel="external nofollow" target="_blank">sis001①</a></li>
       <li><a href="http://sis001.com/forum/index.php" title="sis001" rel="external nofollow" target="_blank">SIS001永久</a></li>
-      <li><a href="http://www.vvporn.com" style="color:#FF0000" title="91porn在线" rel="external nofollow" target="_blank">91porn在线</a></li>
-      <li><a href="http://www.jiepaicc.com/?hmsr=fulidh&amp;hmpl=&amp;hmcu=&amp;hmkw=&amp;hmci=" style="color:#FF0000"  title="街拍客" rel="external nofollow" target="_blank">街拍客</a></li>
-	  <li><a href="http://www.gavavhd.com/"  style="color:#FF0000" title="GavavHD高清" rel="external nofollow" target="_blank">GavavHD高清</a></li>
-      <li><a href="http://174.127.195.187/bbs/index.php?fromuid=15128754" title="SexInSex" rel="external nofollow" target="_blank">SexInSex①</a></li>
-      <li><a href="http://174.127.195.182/bbs/index.php?fromuid=15128754" title="SexInSex" rel="external nofollow" target="_blank">SexInSex②</a></li>
+      <li><a href="http://langp2p.com" style="color:#FF0000" title="野狼社区A片" rel="external nofollow" target="_blank">野狼社区A片</a></li>
+      <li><a href="http://langp2p.com" style="color:#FF0000" title="乱伦无码视频" rel="external nofollow" target="_blank">乱伦无码视频</a></li>
+      <li><a href="http://langp2p.com"  style="color:#FF0000" title="桃色自拍社区" rel="external nofollow" target="_blank">桃色自拍社区</a></li>
+      <li><a href="http://www.aipabbs.me"  style="color:#FF0000" title="萝莉资源" rel="external nofollow" target="_blank">萝莉资源</a></li>
+      <li><a href="http://174.127.195.205/bbs/index.php?fromuid=15128754" title="SexInSex" rel="external nofollow" target="_blank">SexInSex①</a></li>
       <li><a href="http://www.sexinsex.net/bbs/index.php?fromuid=15128754" title="SexInSex永久" rel="external nofollow" target="_blank">SexInSex永久</a></li>
+      <li><a href="https://www.leyuanjun.com/"  style="color:#FF0000"  title="乐园君福利" rel="external nofollow" target="_blank">乐园君福利</a></li>
+      <li><a href="http://www.meisefuli.top" style="color:#FF0000" title="美色福利" rel="external nofollow" target="_blank">美色福利</a></li>
+      <li><a href="http://www.yikuvr.me/" style="color:#FF0000" title="VR福利资源" rel="external nofollow" target="_blank">VR福利资源</a></li>
+      <li><a href="http://www.sina-baidu.com" title="大西瓜porn在线视频" rel="external nofollow" target="_blank">大西瓜porn在线视频</a></li>
+      <li><a href="http://yqq88go.com/xbyn8/151098868" title="性吧论坛①" rel="external nofollow" target="_blank">性吧论坛①</a></li>
+      <li><a href="http://www.sex8.cc" title="性吧论坛永久" rel="external nofollow" target="_blank">性吧论坛永久</a></li>
+      <li><a href="http://www.zuoaifuli.vip/" style="color:#FF0000" title="做爱福利" rel="external nofollow" target="_blank">做爱福利</a></li>
+      <li><a href="http://www.91ribiw.info/" style="color:#FF0000" title="91日逼" rel="external nofollow" target="_blank">91日逼</a></li>
+      <li><a href="http://www.nbacp.com?r_url=pcfuli/" style="color:#FF0000" title="冯莫提直播走光" rel="external nofollow" target="_blank">冯莫提直播走光</a></li>
+      <li><a href="http://www.daoguovr.info" style="color:#FF0000" title="岛国VR资源" rel="external nofollow" target="_blank">岛国VR资源</a></li>
+      <li><a href="http://www.plus28.com/" title="plus28" rel="external nofollow" target="_blank">PLUS28①</a></li>
+      <li><a href="http://www.plus28.com/" title="plus28" rel="external nofollow" target="_blank">PLUS28永久</a></li>
+      <li><a href="http://www.ppzy8.com/" style="color:#FF0000" title="啪啪稀有资源" rel="external nofollow" target="_blank">啪啪稀有资源</a></li>
+      <li><a href="http://www.dbmbbs.com/" style="color:#FF0000" title="大波妹" rel="external nofollow" target="_blank">大波妹</a></li>
+      <li><a href="http://www.ribenfuli.com/" style="color:#FF0000" title="日本福利" rel="external nofollow" target="_blank">日本福利</a></li>
+      <li><a href="http://www.av281.com/" style="color:#FF0000" title="色咪咪视频" rel="external nofollow" target="_blank">色咪咪视频</a></li>
+      <li><a href="http://www.lsj1080.com" title="Myhd" rel="external nofollow" target="_blank">Myhd1①</a></li>
+      <li><a href="https://www.myhd1080.tv/" title="Myhd" rel="external nofollow" target="_blank">Myhd1永久</a></li>
+      <li><a href="http://www.aiqufuli.com"  style="color:#FF0000"  title="爱趣精品福利" rel="external nofollow" target="_blank">爱趣精品福利</a></li>
+      <li><a href="http://www.52klm.net/"  style="color:#FF0000"  title="VIP福利视频" rel="external nofollow" target="_blank">VIP福利视频</a></li>
+      <li><a href="http://www.avfun33.com/" style="color:#FF0000"  title="国产精品资源" rel="external nofollow" target="_blank">国产精品资源</a></li> 
+      <li><a href="http://dysis001.me/" style="color:#FF0000" title="少妇偷情" rel="external nofollow" target="_blank">少妇偷情</a></li>
+      <li><a href="http://wk.hizhan123.com/" title="wk&#32508;合&#35770;&#22363;" rel="external nofollow" target="_blank">wk&#32508;合&#35770;&#22363;①</a></li>
+      <li><a href="http://wk.hizhan123.com/" title="wk&#32508;合&#35770;&#22363;" rel="external nofollow" target="_blank">wk&#32508;合&#35770;&#22363;②</a></li>
+      <li><a href="http://kengdj.com" style="color:#FF0000"  title="8x在线视频" rel="external nofollow" target="_blank">8x在线视频</a></li>
+      <li><a href="http://dh.dilifuli.net" style="color:#FF0000"  title="处女破处视频" rel="external nofollow" target="_blank">处女破处视频</a></li>
+      <li><a href="http://www.91.gcaiai.com/" style="color:#FF0000"  title="富二代免费资源" rel="external nofollow" target="_blank">富二代免费资源</a></li>
+      <li><a href="http://www.zhaifuli8.org/" style="color:#FF0000"  title="宅男资源" rel="external nofollow" target="_blank">宅男资源</a></li>
+      <li><a href="http://hdzone.org/" title="hdzone高清地&#24102;" rel="external nofollow" target="_blank">Hdzone</a></li>
+      <li><a href="http://forum.m-team.cc/?fromuid=232672" title="m-team" rel="external nofollow" target="_blank">M-Team</a></li>
+      <li><a href="http://www.jsmrtk.com/" style="color:#FF0000"  title="江山美人社区" rel="external nofollow" target="_blank">江山美人社区</a></li> 
+      <li><a href="http://www.ak123.me/" style="color:#FF0000"  title="淫乱国产视频" rel="external nofollow" target="_blank">淫乱国产视频</a></li>
+      <li><a href="http://www.ak123.me/" style="color:#FF0000"  title="淫乱人妻视频" rel="external nofollow" target="_blank">淫乱人妻视频</a></li>
+      <li><a href="http://www.zzz3.me/" style="color:#FF0000"  title="大香蕉AV视频" rel="external nofollow" target="_blank">大香蕉AV视频</a></li>
+      <li><a href="http://www.plus28.com/" title="plus28" rel="external nofollow" target="_blank">PLUS28</a></li>
+      <li><a href="http://14.102.250.19/forum/" title="18P2P" rel="external nofollow" target="_blank">18P2P</a></li>
+      <li><a href="http://wuyeziyuan.org" style="color:#FF0000" title="午夜资源" rel="external nofollow" target="_blank">午夜资源</a></li>
+      <li><a href="http://7afuli.com" style="color:#FF0000"  title="少女做爱福利" rel="external nofollow" target="_blank">少女做爱福利</a></li>
+      <li><a href="http://www.jiepaiss.com/"  style="color:#FF0000"  title="街拍客" rel="external nofollow" target="_blank">街拍客</a></li>
+      <li><a href="http://www.vv99a.com/" style="color:#FF0000"  title="威尼斯人" rel="external nofollow" target="_blank">威尼斯人</a></li>   
+      <li><a href="http://ai.cnnice.biz/bt/index.php" title="爱城" rel="external nofollow" target="_blank">爱城</a></li>
+      <li><a href="http://hk-bc.xyz/forum.php" title="比思论坛" rel="external nofollow" target="_blank">比思论坛</a></li>
+      <li><a href="https://www.iavdz.com" style="color:#FF0000"  title="IAV在线视频" rel="external nofollow" target="_blank">IAV在线视频</a></li>
+      <li><a href="http://www.shanhaisy.com/" style="color:#FF0000"  title="山海小说网" rel="external nofollow" target="_blank">山海小说网</a></li>
+      <li><a href="http://www.lu7788.me" style="color:#FF0000" title="撸女神" rel="external nofollow" target="_blank">撸女神</a></li>
+      <li><a href="http://www.btbtt.com/" style="color:#FF0000"  title="BT之家" rel="external nofollow" target="_blank">BT之家</a></li>
+      <li><a href="http://www.mayarrr.com/index.php" title="&#29595;雅网" rel="external nofollow" target="_blank">&#29595;雅网</a></li>      
+      <li><a href="http://www.new-3lunch.net/forum.php" title="new-3lunch" rel="external nofollow" target="_blank">New-3Lunch</a></li>
+      <li><a href="http://fulibk.net/"  style="color:#FF0000"  title="福利百科" rel="external nofollow" target="_blank">福利百科</a></li>   
+      <li><a href="http://www.jkforum.net/" title="捷克论坛" rel="external nofollow" target="_blank">捷克论坛</a></li>
+      <li><a href="https://www.av9.cc/Home/Index" title="藏精阁" rel="external nofollow" target="_blank">藏精阁</a></li>
+      <li><a href="http://dio8899.net/forum.php" title="魔王の家" rel="external nofollow" target="_blank">魔王の家</a></li>
+      <li><a href="http://www.mihk.hk/forum/" title="香港制造&#35770;&#22363;" rel="external nofollow" target="_blank">香港制造&#35770;&#22363;</a></li>
+      <li><a href="http://www.hk-pub.com/forum" title="香港大&#20247;&#35770;&#22363;" rel="external nofollow" target="_blank">香港大&#20247;&#35770;&#22363;</a></li>
+      <li><a href="http://aotu22.com/?yeseyequ" style="color:#FF0000" title="凹凸视频" rel="external nofollow" target="_blank">凹凸视频</a></li>
+      <li><a href="http://1024v3.club/pw/" title="1024核工厂" rel="external nofollow" target="_blank">1024核工厂</a></li>
+      <li><a href="http://www.diqiuav.com/portal.php" title="地球AV" rel="external nofollow" target="_blank">地球AV</a></li>
+      <li><a href="https://okfun.org/forum.php" title="找乐子论坛" rel="external nofollow" target="_blank">找&#20048;子&#35770;&#22363;</a></li>
+      <li><a href="http://204.152.220.40/"  title="黑暗圣殿" rel="external nofollow" target="_blank">黑暗圣殿</a></li>
+      <li><a href="http://www.spring4u.info/"  title="春满四合院" rel="external nofollow" target="_blank">春满四合院</a></li>
+      <li><a href="https://69tang1.com/?yeseyequ" style="color:#FF0000" title="69堂" rel="external nofollow" target="_blank">69堂</a></li> 
+      <li><a href="http://yezu37.club/" title="椰族部落" rel="external nofollow"  target="_blank">椰族部落</a></li>      
+      <li><a href="http://www.naluone-ak.com/forum/" title="娜鲁湾论坛" rel="external nofollow" target="_blank">娜鲁湾论坛</a></li>   
+      <li><a href="https://fastzone.org" title="无限讨论论坛" rel="external nofollow" target="_blank">无限讨论论坛</a></li> 
+      <li><a href="http://www.playno1.com/" title="一剑浣春秋" rel="external nofollow" target="_blank">一剑浣春秋</a></li>
+      <li><a href="http://thzbbt.net/forum.php" title="桃花族" rel="external nofollow" target="_blank">桃花族</a></li>
       <li><a href="http://www.lyzy88.com/" style="color:#FF0000" title="良友资源吧" rel="external nofollow" target="_blank">良友资源吧</a></li>
 	  <li><a href="http://www.tbr4.com/"  style="color:#FF0000" title="汤不热1024" rel="external nofollow" target="_blank">汤不热1024</a></li>
 	  <li><a href="http://www.lu806.com/"  style="color:#FF0000" title="撸吧在线影院" rel="external nofollow" target="_blank">撸吧在线影院</a></li>
@@ -134,11 +199,6 @@ body{ background:url("https://ooo.0o0.ooo/2016/12/09/584a76a88179a.jpg") repeat;
       <li><a href="http://longnian.info/" title="龙年快乐" rel="external nofollow" target="_blank">龙年快乐</a></li>
       <li><a href="http://bbs.svipfuli.vip/" title="svip福利基地" rel="external nofollow" target="_blank">svip福利基地</a></li>
       <li><a href="http://bbs.davidgirl.vip/" title="Davidgirl论坛" rel="external nofollow" target="_blank">Davidgirl论坛</a></li>
-      <li><a href="fulizhan.html#" title="虚位以待" rel="external nofollow" target="_blank">虚位以待</a></li>
-      <li><a href="fulizhan.html#" title="虚位以待" rel="external nofollow" target="_blank">虚位以待</a></li>
-      <li><a href="fulizhan.html#" title="虚位以待" rel="external nofollow" target="_blank">虚位以待</a></li>
-      <li><a href="fulizhan.html#" title="虚位以待" rel="external nofollow" target="_blank">虚位以待</a></li>
-      <li><a href="fulizhan.html#" title="虚位以待" rel="external nofollow" target="_blank">虚位以待</a></li>
   </ul>
   </div>
   <br>
