--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a href="index.html#">首页	</a>
                     </li>
 	      <li>
-                        <a href="https://ssrssr.net/index.php/index/register/" target="_blank" style="color:#FF0000" rel="external nofollow">看世界</a>
+                        <a href="https://kingfast.top/index.php/index/register/" target="_blank" style="color:#FF0000" rel="external nofollow">看世界</a>
                     </li>
 	      <li>
                         <a href="http://caoliudh.tk" target="_blank" style="color:#FF0000" rel="external nofollow">草榴导航</a>
