--- a/jishuzhai.html
+++ b/jishuzhai.html
@@ -40,7 +40,7 @@ body{ background:url("https://ooo.0o0.ooo/2016/10/28/5812c094853c6.jpg") repeat;
     <li><a href="acg.html" target="_blank" title="ACG动漫">ACG</a></li>
     <li><a href="fulizhan.html" target="_blank" title="宅男福利站">HOT福利站</a></li>
     <li><a href="http://caoliudh.tk" title="草榴导航" target="_blank">草榴导航</a></li>
-    <li><a href="https://ssrssr.net/index.php/index/register/" title="神器APP" target="_blank" rel="external nofollow">神器APP</a></li>
+    <li><a href="https://kingfast.top/index.php/index/register/" title="神器APP" target="_blank" rel="external nofollow">神器APP</a></li>
   </ul>
 </div><br>
 <div style="text-align: center"><span style="font-size: 14pt;"><strong><span style="color: #ff0000;"><span style="background-color: #ff0000; color: #ffffff;">提示</span>：部分网站需要梯子. <a href="https://freessr.xyz" target="_blank">点我爬墙! </a>同时按<span style="background-color: #ff0000; color: #ffffff;">Ctrl+D</span>收藏本站!</span></strong></span>
