--- a/jishuzhai.html
+++ b/jishuzhai.html
@@ -43,7 +43,7 @@ body{ background:url("https://ooo.0o0.ooo/2016/10/28/5812c094853c6.jpg") repeat;
     <li><a href="https://kingfast.top/index.php/index/register/" title="神器APP" target="_blank" rel="external nofollow">神器APP</a></li>
   </ul>
 </div><br>
-<div style="text-align: center"><span style="font-size: 14pt;"><strong><span style="color: #ff0000;"><span style="background-color: #ff0000; color: #ffffff;">提示</span>：部分网站需要梯子. <a href="https://freessr.xyz" target="_blank">点我爬墙! </a>同时按<span style="background-color: #ff0000; color: #ffffff;">Ctrl+D</span>收藏本站!</span></strong></span>
+<div style="text-align: center"><span style="font-size: 14pt;"><strong><span style="color: #ff0000;"><span style="background-color: #ff0000; color: #ffffff;">提示</span>：部分网站需要梯子. <a href="https://freessr.win" target="_blank">点我爬墙! </a>同时按<span style="background-color: #ff0000; color: #ffffff;">Ctrl+D</span>收藏本站!</span></strong></span>
 <br>
 <br>
 <br>
@@ -67,7 +67,7 @@ body{ background:url("https://ooo.0o0.ooo/2016/10/28/5812c094853c6.jpg") repeat;
       <li><a href="http://sourceforge.net/" title="sourceforge" rel="external nofollow" target="_blank">Sourceforge</a></li>
       <li><a href="https://zh.wikipedia.org/wiki/Wikipedia:%E9%A6%96%E9%A1%B5" title="维基百科" rel="external nofollow" target="_blank">维基百科</a></li>
       <li><a href="http://freecode.com/" title="freecode" rel="external nofollow" target="_blank">Freecode</a></li>
-      <li><a href="https://freessr.xyz" title="免费ss" rel="external nofollow" target="_blank">免费ss</a></li>
+      <li><a href="https://freessr.win" title="免费ss" rel="external nofollow" target="_blank">免费ss</a></li>
   </ul>
 </div><br>
 <div id="qiangwai" class="wrap mt1 nav">
