--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
             <div class="text-center">
                 <a href="http://www.baidu.com/" target="_blank" class="index-btn">百度一下</a>&emsp;
-                <a href="https://superssr.tk/code" target="_blank" class="index-btn">谷歌一下</a>
+                <a href="https://kingfast.top/index.php/index/register/" target="_blank" class="index-btn">谷歌一下</a>
             </div>
 
         </div>
@@ -156,7 +156,7 @@
     <div class="footer">
         <p>
             <a href="http://fulifuli.bid" target="_blank">福利福利站 fulifuli.bid</a>
-            ©Copyright 2009-2016
+            ©Copyright 2009-2018
             声明：所有站点源于收集与网友分享，其内容与本站无关！禁止18岁以下访问福利站。
 <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1260662660'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/z_stat.php%3Fid%3D1260662660' type='text/javascript'%3E%3C/script%3E"));</script>
         </p>
