--- a/jishuzhai.html
+++ b/jishuzhai.html
@@ -50,8 +50,8 @@ body{ background:url("https://ooo.0o0.ooo/2016/10/28/5812c094853c6.jpg") repeat;
  <div id="daili" class="wrap mt1 nav">
 <div class="btcont">科学上网</div>
   <ul class="nav_menu clearfix">
-      <li><a href="http://t.cn/RcHEvzV" title="加速度" rel="external nofollow" target="_blank">加速度</a></li>
-      <li><a href="http://superssr.tk/code" title="正确上网" rel="external nofollow" target="_blank">正确上网</a></li> 
+      <li><a href="https://kingfast.top/index.php/index/register/" title="加速度" rel="external nofollow" target="_blank">加速度</a></li>
+      <li><a href="https://kingfast.top/index.php/index/register/" title="正确上网" rel="external nofollow" target="_blank">正确上网</a></li> 
       <li><a href="https://github.com/comeforu2012/truth/wiki/ChromePlus" title="ChromePlus" rel="external nofollow" target="_blank">ChromePlus</a></li> 
       <li><a href="http://www.ppdaili.com/" title="点击continiu anyway…" rel="external nofollow" target="_blank">PP代理</a></li>
       <li><a href="http://t.cn/RcHEvzV" title="点击continiu anyway…" rel="external nofollow" target="_blank">急速代理</a></li> 
